--- a/cart.html
+++ b/cart.html
@@ -1,1 +1,141 @@
-<!DOCTYPE html><html><head><title>Cart</title></head><body><h1>Cart Page</h1></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dinhata Buzzer Hub - Cart</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        .cart-container {
+            padding: 40px 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            background: white;
+            border-radius: 6px;
+            overflow: hidden;
+        }
+
+        th, td {
+            padding: 15px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+
+        th {
+            background: #2874f0;
+            color: white;
+        }
+
+        .qty-input {
+            width: 60px;
+            padding: 5px;
+        }
+
+        .remove-btn {
+            background: #ff3d00;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .checkout-btn {
+            margin-top: 20px;
+            float: right;
+            padding: 12px 25px;
+            background: #2874f0;
+            color: white;
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: 0.3s;
+        }
+
+        .checkout-btn:hover {
+            background: #1a3fa0;
+        }
+
+        .empty-cart {
+            text-align: center;
+            padding: 50px;
+            font-size: 18px;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <div class="top-header">
+            <div class="logo">
+                <i class="fas fa-bolt logo-icon"></i>
+                <h1>Dinhata <span>Buzzer Hub</span></h1>
+            </div>
+            <div class="user-actions">
+                <div class="action-item" onclick="window.location.href='index.html'">
+                    <i class="fas fa-home"></i> Home
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="cart-container">
+        <h2><i class="fas fa-shopping-cart"></i> Your Cart</h2>
+        <div id="cartContent"></div>
+        <button class="checkout-btn" onclick="checkout()">Checkout</button>
+    </div>
+
+    <script src="js/location.js"></script>
+    <script>
+        // Load cart from localStorage
+        function loadCart() {
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const container = document.getElementById('cartContent');
+            if (!cart.length) {
+                container.innerHTML = '<div class="empty-cart">Your cart is empty!</div>';
+                document.querySelector('.checkout-btn').style.display = 'none';
+                return;
+            }
+            document.querySelector('.checkout-btn').style.display = 'inline-block';
+
+            let html = '<table><thead><tr><th>Product</th><th>Price</th><th>Qty</th><th>Total</th><th>Action</th></tr></thead><tbody>';
+            cart.forEach((item, index) => {
+                html += `<tr>
+                    <td>${item.name}</td>
+                    <td>₹${item.price}</td>
+                    <td><input type="number" min="1" value="${item.qty}" class="qty-input" onchange="updateQty(${index}, this.value)"></td>
+                    <td>₹${item.price * item.qty}</td>
+                    <td><button class="remove-btn" onclick="removeItem(${index})">Remove</button></td>
+                </tr>`;
+            });
+            html += '</tbody></table>';
+            container.innerHTML = html;
+        }
+
+        function updateQty(index, qty) {
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            cart[index].qty = parseInt(qty);
+            localStorage.setItem('cart', JSON.stringify(cart));
+            loadCart();
+        }
+
+        function removeItem(index) {
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            cart.splice(index, 1);
+            localStorage.setItem('cart', JSON.stringify(cart));
+            loadCart();
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            loadCart();
+        });
+    </script>
+</body>
+</html>
